Fixed flickering caused by cursor: pointer

--- a/src/style.css
+++ b/src/style.css
@@ -27,7 +27,6 @@ h1 {
 canvas {
   background-color: #eee;
   border: solid 1px #999;
-  cursor: pointer;
   display: block;
   /* height: 32rem; */
   margin: 1rem auto;
